# zosia

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env  test_write_issue.py
.github/ISSUE_TEMPLATE/: translation.yml
config/: app.yaml  data.yaml  data_config.yaml  default.yaml  default_config.yaml  hyperparams.yaml  model.yaml  model_config.yaml  tokenizer.yaml  tokenizer_config.yaml  training.yaml  training_config.yaml
data/corpus/: bsb.json  datasets.yaml  en-zo.tsv  nmt-share.tsv  parallel-phrase.tsv  quotes.json  zo-en.tsv  zo-no.tsv
data/locale/: en.profile.json  zo.profile.json
data/parallel_base/: bsb-tedim.en  bsb-tedim.zo  index.yaml  noun-name.en  noun-name.zo  noun-place.en  noun-place.zo  phrase.en  phrase.zo  test.en  test.zo  train.en  train.zo  word.en  word.zo
data/raw/: base_training.yaml
data/templates/: Readme.md  adjective-structure.yaml  glossary-advanced.yaml  glossary-basic.yaml  glossary-grammar.yaml  noun-name.en  noun-name.val  noun-name.yaml  noun-name.zo  noun-place.yaml  noun-structure.yaml  test.yaml  verb-structure.yaml
data/test/: en-zo.tsv  zo-en.tsv
data/tokenizers/: tokenizer_en.json  tokenizer_zo.json  zo_en_nmt_sp.model  zo_en_nmt_sp.vocab
docs/: HardwareConfiguration.md  Hyperparameter.md  Model.md  Notes.md  Purpose.md  Quantifiers.md  Scripts.md  Setup.md  Tests.md  data_preparation_guide.md  model_architecture.md  present-tense.md  project_overview.md  setup_guide.md  structure.md  tmp.md  vocab_size.md  web.md
mock/corpus/: datasets.yaml
mock/templates/: sample_conditional_template.yaml
scripts/: _bible_core.py  analyze_model.py  back_translate.py  bible_align.py  bible_parallel.py  build_profiles.py  generate_from_templates.py  nmt.py  preprocess_data.sh  process_tsv.py  quotes_merge.py  run_training.sh  scaffold.py  translate_text.sh  tune.py
scripts/bible/: align.py  config.py  merge.py  parallel.py
scripts/template/: common_rules.yaml  common_slots.yaml  generate_sentences.py  templates.yaml
src/data/: dataset_utils.py  make_dataset.py
tests/: test_detector.py  test_full_pipeline.py  test_models.py  test_pipeline.py  test_preprocess.py
(+58 files in other folders)
