[project]
name = "zosia"
version = "0.1.0"
description = "Zo-English Neural Machine Translation System"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.9"
dependencies = [
    # Dependencies are typically managed by requirements.txt for simpler projects
    # But for a proper package, you'd list them here
]

[project.urls]
"Homepage" = "https://github.com/yourusername/zosia" # Replace with your repo URL
"Bug Tracker" = "https://github.com/yourusername/zosia/issues"

[tool.setuptools]
packages = ["src"] # Tell setuptools to find packages in 'src'

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"] # conflicts with black


[tool.pytest.ini_options]
pythonpath = "src"