# pyproject.toml
# This file contains project metadata and build system configuration.
# It follows the PEP 621 standard for modern Python packaging.

[project]
name = "zosia"
version = "0.1.0"
description = "Bidirectional Machine Translation for Zolai and English (Zo <-> En)"
authors = [
    { name = "Khen Solomon Lethil", email = "khensolomon@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Project dependencies are listed in requirements.txt for simplicity in this project,
# but can also be specified directly here.
dependencies = []

[project.urls]
"Homepage" = "https://github.com/khensolomon/zosia"
"Bug Tracker" = "https://github.com/khensolomon/zosia/issues"

